[package]
name = "rusty-music-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
poise = "0.6.1"
songbird = "0.4.1"
symphonia = { version = "0.5.4", features = ["all-codecs"] }
tokio = { version = "1.38.0", features = ["macros", "full"] }
url = "2.5.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.12"
